# SCOOP

./: .gitignore  .gitmodules  README.md  environment.yml  environment_omicverse.yml  project.yaml  pyproject.toml
configs/: annotation_decision_schema.yaml  default_run.yaml  h5ad_schema.yaml  omicverse_reuse_policy.yaml
data/processed/: README.md
data/raw/: README.md
docs/: 00_design_principles.md  01_project_structure.md  02_modules_and_outputs.md  03_omicverse_reuse.md  04_agent_interfaces.md  05_annotation_fast_architecture.md  05_parameter_tuning.md  06_fastcore_omicverse_architecture.md  references.md
docs/fastcnmf/: 00_project_plan.md  01_benchmark_protocol.md  02_execution_status.md  03_architecture_and_harmony2.md  04_large_benchmark_roadmap.md
docs/fastcnvpy/: 00_python_port.md
docs/fastcopykat/: 00_project_plan.md  (+2 more)
markers/: T.md  fibroblast.md  macrophage.md  tumor-BRCA.md  tumor-CRC.md  tumor-GBM.md
r/: run_pseudobulk_deseq2.R  run_pseudobulk_edger.R
scripts/: 00_validate_input.py  01_qc_scrublet.py  02_core_analysis.py  03_fast_consensus_nmf.py  04_annotation_markers.py  04a_annotation_evidence.py  04b_tumor_fastcnvpy.py  04c_annotation_decide.py  04c_annotation_export_for_agent.py  04d_annotation_commit.py  05_spatial_rctd.py  06_ccc_fastccc.py  07_prune_and_manifest.py  08_prepare_pseudobulk.py  09_pseudobulk_de_python.py  README.md  integrate_spatial_cnmf_batch_adjusted_results.py  integrate_spatial_cnmf_harmony_results.py  integrate_spatial_cnmf_results.py  prepare_quick_test_h5ad.R  prepare_spatial_cnmf_batch_adjusted_input.py  prepare_spatial_cnmf_harmony_input.py  prepare_spatial_cnmf_input.py  run_spatial_cnmf_batch_adjusted_benchmark.sh  run_spatial_cnmf_benchmark.sh  run_spatial_cnmf_harmony_benchmark.sh  summarize_spatial_cnmf_batch_adjusted_benchmark.py  summarize_spatial_cnmf_benchmark.py  summarize_spatial_cnmf_harmony_benchmark.py
spatialdata/: README.md
tests/: test_annotation_decision_schema.py  test_annotation_validator.py  test_core_runner.py  test_fastcnmf_benchmark_manifest.py  test_fastcnmf_factorize_backends.py  test_fastcnmf_harmony2_compat.py  test_fastcnmf_preprocess_quality.py  test_fastcnmf_quality.py  test_fastcnmf_scaffold.py  test_fastcnvpy.py  test_fastcopykat.py  test_fastcore_external_omicverse_backends.py  test_fastcore_registry_and_quality.py  test_fastcore_runtime.py  test_fastcore_vendored_omicverse.py  test_fastde.py  test_fastde_abundance_binary.py  test_fastde_abundance_cli.py  test_fastde_abundance_data.py  test_fastde_abundance_design.py  test_fastde_abundance_loss.py  test_fastde_abundance_multiclass.py  test_fastde_abundance_survival.py  test_omicverse_submodule_bridge.py  test_omicverse_transfer.py  test_program_sanitizer.py  test_pseudobulk_de_python.py  test_scoop_fast_contracts.py  test_scoop_package.py  test_storage.py  test_tumor_cnv_workflow.py
(+136 files in other folders)
