[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoop-operating-protocol"
version = "0.2.0"
description = "SCOOP: Single Cell Omics Operating Protocol for robust, auditable single-cell and spatial omics workflows."
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = [
  "anndata>=0.10",
  "scanpy>=1.10",
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "pyarrow>=14.0",
  "matplotlib>=3.7",
  "harmonypy>=2.0,<3",
  "torch>=2.0",
  "lifelines>=0.30"
]

[project.scripts]
fastde = "fastde.cli:main"
fastcnmf = "fastcnmf.cli:main"
fastcopykat = "fastcopykat.cli:main"
fastcnvpy = "fastcnvpy.cli:main"
fastcore = "fastcore.cli:main"

[project.optional-dependencies]
full = [
  "fastccc",
  "cellphonedb",
  "liana",
  "spatialdata"
]
omicverse = [
  "squidpy>=1.4",
  "scvi-tools>=1.1",
  "omicverse>=2.0",
  "spatialdata"
]

[tool.setuptools.packages.find]
where = ["src"]
